--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,13 @@
 <html>
-<head>
-    <title>
-        Intro To HTML
-    </title>
-</head>
-<body>
-    <h1>Introduction to HTML</h1>
-    <p>Today I'm going to study about HTML</p>
-</body>
+    <head>
+     <title>My Introduction</title>  
+    </head>
+    <body>
+        <b>Hi! My name is <mark>Aaradhya Singh Raghuvanshy</mark></b><br>
+        <h1>I am <i>11 years.</i></h1><br>
+        <strong>My favourite subjects are <mark>Maths and Science</mark></strong><br>
+        <h3>My parents love me and <i>I love my parents too!</i></h3><br>
+        My favourite Quotation is - <br>
+        <mark><q>Programming isn't about what you knew, it is about what you can figue out.</q></mark>
+    </body>
 </html>
